--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
-pyrogram > 1.0.0
-tgcrypto
+appdirs==1.4.4
+APScheduler==3.6.3
+async-lru==1.0.2
+click==7.1.2
+pathspec==0.8.1
+psycopg2==2.8.6
+pyaes==1.6.1
+pydantic==1.7.3
+Pyrogram==1.1.8
+PySocks==1.7.1
+python-decouple==3.4
+pytz==2020.5
+regex==2020.11.13
+six==1.15.0
+SQLAlchemy==1.3.22
+TgCrypto==1.2.2
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+tzlocal==2.1
