--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Astrapel Lygdamus <astrapel@protonmail.ch>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.6, <3.10"
 Pyrogram = "^1.1.8"
 tgcrypto = "^1.2.2"
 SQLAlchemy = "^1.3.22"
